# Google_Hack

./: .gitignore  README.md  demo.sh  pyproject.toml  requirements.txt  test.json  triage.py
.claude/: settings.local.json
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  generators.baml  log_triage.baml  triage.baml
logtriage/: anomaly.py  bursting.py  discover.py  pipeline.py  templatize.py  triage.py
tests/: test_pipeline.py
triage/: __main__.py  pipeline.py  prefilter.py  profiles.py  windowing.py
